[package]
name = "xtyp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
copy_dir = "0.1.3"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
